# parallel_test

./: CMakeLists.txt
20220910_pso_c_omp/: a.out  ptapso_omp.c  ptapso_omp.h  ptapsotestfunc.c  ptapsotestfunc.h  readme.txt  run_pso_omp_1.sh  test_ptapso_omp.c
20220910_pso_c_omp/test/: a.out  run.sh  test_1.c  test_bestx_0801.m  test_cost_fitness_1.c  test_cost_open_omp.c
cuda/: test_inner.cpp
cuda/sources/: innerProduct.cpp
headers/: benchmark.h
sources/: benchmark.cpp  test.cpp
